[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OXO"
version = "0.0.1"
dependencies = []

[metadata]
name = "OXO"
version = "0.0.1"

#[project.scripts]
#oxo = "OXO.CMD.Main:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
log_cli = false

[tool.black]
line-length = 80
target-version = ['py311']